--- a/config/locales/models/position/pt-BR.yml
+++ b/config/locales/models/position/pt-BR.yml
@@ -8,7 +8,7 @@ pt-BR:
         career: Carreira
         careers:
           developer: Desenvolvedor
-          business_intelligence: Business Intelligence
+          business_inteligence: Business Intelligence
           information_technology: Tecnologia da Informação
           design: Design
           product: Produto
